--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "maxcal/wordpress-decorators",
     "description": "Decorator patter objects for wordpress",
     "require-dev": {
-        "phpspec/phpspec": "~2.1"
+        "phpunit/phpunit": "~4.5",
+        "vlucas/phpdotenv": "~1.1"
     },
     "license": "MIT",
     "authors": [
