--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,13 @@
     "description": "Decorator patter objects for wordpress",
     "require-dev": {
         "phpunit/phpunit": "~4.5",
-        "vlucas/phpdotenv": "~1.1"
+        "vlucas/phpdotenv": "~1.1",
+        "symfony/css-selector": "~2.6",
+        "symfony/dom-crawler": "~2.6",
+
+    },
+    "require": {
+        "maxcal/tag-helper": "0.0.1.*"
     },
     "license": "MIT",
     "authors": [
