--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
     "name": "maxcal/wordpress-decorators",
-    "description": "Decorator patter objects for wordpress",
+    "description": "Decorator pattern objects for WordPress",
     "require-dev": {
         "phpunit/phpunit": "~4.5",
         "vlucas/phpdotenv": "~1.1",
         "symfony/css-selector": "~2.6",
-        "symfony/dom-crawler": "~2.6",
+        "symfony/dom-crawler": "~2.6"
 
     },
     "require": {
@@ -18,7 +18,6 @@
             "email": "max.calabrese@ymail.com"
         }
     ],
-    "require": {},
     "autoload": {
         "psr-4": {
             "Maxcal\\WordpressDecorators\\": "src"
